Routes exist, but we need to finalize the Collections Data Structure
